fixed the alignment of skills and added a css folder with reset.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-*{
-  margin: 0;
-  padding: 0;
-}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
@@ -29,7 +26,7 @@ header > span{
 }
 
 .hero{
-  background-image: url("images/background-sakura.jpg");
+  background-image: url("../images/background-sakura.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
@@ -68,7 +65,7 @@ header > span{
 }
 
 .my-work{
-  background-image: url("images/bg.svg");
+  background-image: url("../images/bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 50px;
@@ -146,7 +143,7 @@ header > span{
   width: 300px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin: 30px 0;
   justify-items: center;
 
@@ -198,7 +195,7 @@ header > span{
   background-color: white;
   margin-bottom: 10px;
   padding: 0 50px;
-  background-image: url("images/footer-pic.png");
+  background-image: url("../images/footer-pic.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -349,7 +346,7 @@ footer{
   }
 
   .hero{
-    background-image: url("images/background-sakura.jpg");
+    background-image: url("../images/background-sakura.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
     height: 100%;
